# llmstitch

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  GUIDE.md  LICENSE  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: async_and_timeout.py  basic.py  cost_ceiling.py  observability.py  parallel_tools.py  providers_gallery.py  retries.py  skills_demo.py  streaming.py  streaming_with_result.py  token_counting.py  tool_concurrency.py
src/llmstitch/: __init__.py  agent.py  errors.py  events.py  result.py  retry.py  tools.py  types.py
src/llmstitch/providers/: __init__.py  anthropic.py  base.py  gemini.py  groq.py  openai.py  openrouter.py
tests/: conftest.py  test_agent_loop.py  test_agent_result.py  test_events.py  test_provider_translation.py  test_registry_concurrency.py  test_retry.py  test_skills.py  test_streaming.py  test_token_counting.py  test_tool_concurrency.py  test_tools.py  test_usage.py
